<resources>
    <string name="app_name">Clock</string>
    <string name="about_button">About</string>

    <!-- Screens Title -->
    <string name="about_screen_title">About</string>
    <string name="timer_screen_title">Timer</string>
    <string name="clock_screen_title">Clock</string>
    <string name="settings_screen_title">Settings</string>

    <!-- ClockFragment -->
    <string name="default_time">12:45</string>
    <string name="default_date">Tuesday, 17 Dec 2024</string>
    <string name="default_time_zone">GMT+2</string>
    <string name="btn_timer">Timer</string>
    <string name="btn_settings">Settings</string>
    <string name="time_zone_label">Time zone - %s</string>

    <!-- Timer Fragment -->
    <string name="text_timer">00:00:00</string>
    <string name="start_btn">Start</string>
    <string name="pause_btn">Pause</string>
    <string name="lap_btn">Lap</string>
    <string name="stop_btn">Stop</string>

    <!-- Settings Fragment -->
    <string name="timezone_label">Time zone</string>
    <string name="save_button">Save</string>

    <!-- About Fragment -->
    <string name="version_text">Version: 1.0.0</string>
    <string name="developer_text">Developer: Nikolayets Marina</string>
    <string name="group_text">Group: KB-212</string>
</resources>